--- a/src/html/base/index.html
+++ b/src/html/base/index.html
@@ -31,14 +31,24 @@
         </div>
     </div>
 
-    <div class="light-wrapper">
+    <div class="content-wrapper-light">
         <div class="wrapper">
             <ul class="links">
                 <li>
-                    <a href="https://github.com/a17fellu"><img class="logo-external" src="../../images/logos/GitHub-Logos/GitHub-Logos/GitHub_Logo_White.png"></a>
-                    <a href="https://www.linkedin.com/in/felix-lundh-609b93177/"><img class="logo-external" src="../../images/logos/LinkedIn-Logos/LI-Logo.png"></a>
+                    <a href="https://github.com/a17fellu"><img class="logo-external" id="github" src="../../images/logos/GitHub-Logos/GitHub-Logos/GitHub_Logo_White.png"></a>
+                </li>
+                <li>
+                    <a href="https://www.linkedin.com/in/felix-lundh-609b93177/"><img class="logo-external" id="linkedin" src="../../images/logos/LinkedIn-Logos/LI-Logo.png"></a>
                 </li>
             </ul>
+        </div>
+    </div>
+
+    <div class="content-wrapper">
+        <div class="wrapper">
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Nisi porta lorem mollis aliquam ut porttitor leo a diam. Mi bibendum neque egestas congue quisque. In hendrerit gravida rutrum quisque non tellus. Placerat duis ultricies lacus sed turpis tincidunt. Luctus accumsan tortor posuere ac. Tristique risus nec feugiat in fermentum posuere urna. Malesuada fames ac turpis egestas sed tempus urna. Elit sed vulputate mi sit amet. Quisque non tellus orci ac auctor augue. A cras semper auctor neque vitae tempus quam. Faucibus vitae aliquet nec ullamcorper sit. Tincidunt lobortis feugiat vivamus at.
+            </p>
         </div>
     </div>
 
