--- a/src/html/base/index.html
+++ b/src/html/base/index.html
@@ -31,7 +31,7 @@
         </div>
     </div>
 
-    <div class="content-wrapper">
+    <div class="content-wrapper-light">
         <div class="wrapper">
             <ul class="links">
                 <li>
