--- a/src/html/base/index.html
+++ b/src/html/base/index.html
@@ -26,7 +26,7 @@
 
             <div class="hero-content">
                 <h1>Portfolio dedicated to my projects</h1>
-                <p class="subtitle">Building applications for Desktop/Mobile/Web &amp; Backend Developer</p>
+                <p class="subtitle">Applications built for Desktop/Mobile/Web</p>
             </div>
         </div>
     </div>
